Embryo for Kafka modules, comms up and running

--- a/Kafka/Consumer/Module/Crosser.EdgeNode.Modules.Kafka.Consumer.csproj
+++ b/Kafka/Consumer/Module/Crosser.EdgeNode.Modules.Kafka.Consumer.csproj
@@ -6,6 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="Crosser.EdgeNode.Flows" Version="2.0.7" />
+    <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
   </ItemGroup>
-
 </Project>
