--- a/Kafka/Producer/Module/Crosser.EdgeNode.Modules.Kafka.Producer.csproj
+++ b/Kafka/Producer/Module/Crosser.EdgeNode.Modules.Kafka.Producer.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     <PackageReference Include="Crosser.EdgeNode.Flows" Version="2.0.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+
 </Project>
