--- a/NodeJS/Module/Crosser.EdgeNode.Modules.NodeJs.Bridge.csproj
+++ b/NodeJS/Module/Crosser.EdgeNode.Modules.NodeJs.Bridge.csproj
@@ -2,13 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-     <Version>1.0.0-preview004</Version>
+     <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     <PackageReference Include="Crosser.EdgeNode.Flows" Version="2.0.7" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
